Fixed issue of website attribution wrapping on narrow screens.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
     justify-content: center;
     font-size: 1.2rem;
     color: #004466;
-    margin: 4rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
     font-family: monospace;
 }
 
